boosted loading speeds by like 200%

--- a/templates/employers/employerportal.html
+++ b/templates/employers/employerportal.html
@@ -17,8 +17,7 @@
         <h3>Employees:</h3>
         <ul>
         {% for employee in employees %}
-            {% set return = db.main.employee.find_one({"id": employee}) %}
-            <li><a href="{{url_for('employer_routes.manage_employee', employee_id_sent=return['id'])}}"> {{return["name"]}}</a></li>
+            <li><a href="{{url_for('employer_routes.manage_employee', employee_id_sent=employee['id'])}}"> {{employee["name"]}}</a></li>
         {% endfor %}
         </ul>
 
