--- a/templates/jobs/job_main.html
+++ b/templates/jobs/job_main.html
@@ -29,10 +29,12 @@
             <form action="{{url_for('job_datahandlers.job_add_employee', job_id_sent=job_id, owner_sent=owner_token)}}" method="post">
                 <label for="Employee">Choose employee</label>
                 <select name="Employee" id="Employee" required>
-                    {% for employee in employer_employees %}
+                    {% for employee in employer_employees  %}
+                    {% if employee not in job_employees %}
                         {% set employee_results=db.main.employee.find_one({"id": employee}) %}
                         {% set employee_name=employee_results["name"] %}
                         <option value="{{employee_results['id']}}">{{employee_name}}</option>
+                    {% endif %}
                     {% endfor %}
                 <input type="submit" id="add" value="Add Employee">
             </form>
